# ResearchAssistant

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  HANDOFF.md  README.md  STATUS.md  cli.py  models.py  orchestrator.py  pyproject.toml  requirements.txt  store.py  utils.py
.agent/: PLANS.md
.agent/plans/: ci-daily-expanded-checks.md  phase-00-foundation.md  phase-01-models.md  phase-02-store.md  phase-03-snapshot-integrity.md  phase-04-ledger-admission.md  phase-05-release-gate.md  phase-06-fixture-pipeline.md  phase-07-retrieval.md  phase-07a-local-frontend.md  phase-08-llm-integration.md  phase-09-orchestration.md  phase-10-evaluation.md  phase-mvp-1-release-contract-correctness.md  phase-mvp-2a-architecture-gate.md  phase-mvp-2b-production-provider-boundaries.md  phase-mvp-3a-mocked-full-provider-pipeline.md  phase-mvp-3b-live-canary-stabilization.md  (+2 more)
.github/workflows/: ci.yml
agents/: analyst.py  opposingresearcher.py  planner.py  renderer.py  researcher.py  reviewer.py  supportingresearcher.py  synthesizer.py
evaluations/: README.md  __init__.py  evaluator.py  run_evaluations.py  schema.py
frontend/: README.md  streamlit_app.py
prompts/: analyst.md  extractor.md  planner.md  reviewer.md  synthesizer.md
providers/: acquisition.py  config.py  llm.py  normalization.py  openrouter.py  pricing.py  scraper.py  search.py  wigolo.py
scripts/: mvp2b_live_smoke.py
tests/: test_mvp1.py  test_mvp2b_providers.py  test_phase0_foundation.py  test_phase1.py  test_phase10.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase7_frontend.py  test_phase8.py  test_phase9.py
(+30 files in other folders)
