[project]
name = "debate-research-agent-system"
version = "0.0.0"
description = "Phase-scoped scaffold for the Debate Research Agent System."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "markdown-it-py>=3.0,<4.0",
    "pydantic>=2.0,<3.0",
    "pypdf>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "streamlit>=1.37,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "evaluations/output/*",
]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
